<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.code.myapplication.Main2Activity">

    <EditText
        android:id="@+id/prvi_broj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:hint="@string/dodaj_prvi_broj"
        />

    <EditText
        android:id="@+id/drugi_broj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:hint="@string/dodaj_drugi_broj"/>

    <Button
        android:id="@+id/saberi_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saberi"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
